--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -12,7 +12,10 @@ pipeline {
 
         stage('Build backend ') {
             steps {
+                sh 'pwd'
+
                 sh 'cd back_pro_sec-main'
+                sh 'pwd'
                 sh 'npm run build'
 
             }
