--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -5,7 +5,9 @@ pipeline {
 
         stage('Install dependencies backend') {
             steps {
-
+                sh 'pwd'
+                sh 'cd back_pro_sec-main'
+                sh 'pwd'
                 sh 'npm install'
             }
         }
