--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -20,10 +20,10 @@ pipeline {
     
         stage('Install Frontend Dependencies') {
             steps {
-            cd front_proj_sec1-main
-            rm -rf node_modules    
-            npm cache clean --force 
-            npm install              
+            dir('front_proj_sec1-main')
+            sh 'rm -rf node_modules'    
+            sh 'npm cache clean --force' 
+            sh 'npm install'              
                 
             }
         }
@@ -33,6 +33,23 @@ pipeline {
                 sh 'npm run build --prefix front_proj_sec1-main'
             }
         }
+        stage('Deploy to EC2') {
+            steps {
+                script {
+                    def remote = [:]
+                    remote.name = 'EC2_Instance'
+                    remote.host = 'YOUR_EC2_PUBLIC_IP' 
+                    remote.user = 'ec2-user' 
+                    remote.identityFile = [key: 'YOUR_PRIVATE_KEY'] 
+                    sshCommand remote: remote, command: '''
+                        cd /path/to/your/application
+                        git pull origin main  
+                        npm install          
+                        npm run build
+                    '''
+                }
+            }
+        }        
 
     }
 
