--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
 
     stages {
-
         stage('Install dependencies backend') {
             steps {
                 sh 'npm install --prefix back_pro_sec-main'
@@ -11,28 +10,28 @@ pipeline {
 
         stage('Build backend ') {
             steps {
-                sh 'pwd'
                 sh 'npm run build --prefix back_pro_sec-main'
-
             }
         }
 
-    
         stage('Install Frontend Dependencies') {
             steps {
-            dir('front_proj_sec1-main')
-            sh 'rm -rf node_modules'    
-            sh 'npm cache clean --force' 
-            sh 'npm install'              
-                
+                script {
+                    dir('front_proj_sec1-main') {
+                        sh 'rm -rf node_modules'
+                        sh 'npm cache clean --force'
+                        sh 'npm install'
+                    }
+                }
             }
         }
         
-        stage('build frontend '){
+        stage('build frontend') {
             steps {
                 sh 'npm run build --prefix front_proj_sec1-main'
             }
         }
+
         stage('Deploy to EC2') {
             steps {
                 script {
@@ -50,7 +49,5 @@ pipeline {
                 }
             }
         }        
-
     }
-
 }
