--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -43,9 +43,10 @@ pipeline {
             steps {
                 script {
                     def privateKey = env.SSH_PRIVATE_KEY
-
                     // Write private key to a temporary file
                     def sshKeyFile = writeFile file: 'temp_ssh_key', text: privateKey.trim()
+                    sh "ls"
+                    sh "cat ${sshKeyFile}"
                     sh "chmod 600 ${sshKeyFile}"
 
                     // Copy files to EC2 using SSH key
