--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
         stage('Deploy to EC2') {
             steps {
                 script {
-                    sh "chmod 600 servless.pem"
+                    sh "chmod 600 back_pro_sec-main/servless.pem"
 
                     // Copy files to EC2 using SCP
                     sh "scp -i back_pro_sec-main/servless.pem -r ./* ec2-user@50.16.85.89:~/"
