--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
             steps {
                 script {
                     sh "chmod 600 back_pro_sec-main/servless.pem"
-
+                    sh "cat back_pro_sec-main/servless.pem"    
                     // Copy files to EC2 using SCP
                     sh "scp StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem -r ./* ec2-user@50.16.85.89:~/"
 
