--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -44,7 +44,9 @@ pipeline {
                     sh "chmod 600 back_pro_sec-main/servless.pem"
                     sh "cat back_pro_sec-main/servless.pem"    
                     // Copy files to EC2 using SCP
-                    sh "scp -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem -r ./* ec2-user@50.16.85.89:~/"
+                    sh 'rm -rf back_pro_sec-main/node_modules'
+                    sh 'rm -rf front_proj_sec1-main/node_modules'
+                    sh "scp -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem -r ./back_pro_sec-main ./front_proj_sec1-main ec2-user@50.16.85.89:~/"
 
                     // SSH into EC2 and execute build commands
                    
