--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -56,6 +56,7 @@ pipeline {
                             cd ~/back_pro_sec-main &&
                             npm install &&
                             npm run build &&
+                            npm install pm2 -g &&
                             pm2 start index.js --name my-app'
                         
                         ssh -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem ec2-user@50.16.85.89 '
