--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -58,15 +58,14 @@ pipeline {
                             npm install &&
                             npm run build &&
                             npm install pm2 -g &&
-                            pm2 start'
+                            pm2 start index.js --name my-app'
                         
                         ssh -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem ec2-user@50.16.85.89 '
                             cd ~/front_proj_sec1-main &&
                             && rm -rf node_modules &&
                             npm install &&
                             npm run build &&
-                            npm install pm2 -g &&
-                            pm2 start
+                            npm start
                     """
                 }
             }
