--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
                             npm install &&
                             npm run build &&
                             npm install pm2 -g &&
-                            pm2 start index.js --name my-app
+                            pm2 start index.js --name my-app -f
                         
                         ssh -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem ec2-user@50.16.85.89 '
                             cd ~/front_proj_sec1-main &&
