--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -39,36 +39,35 @@ pipeline {
         // }
 
         stage('Deploy to EC2') {
-            steps {
-                script {
-                    sh "chmod 600 back_pro_sec-main/servless.pem"
-                    sh "cat back_pro_sec-main/servless.pem"    
-                    // Remove node_modules to ensure fresh installs
-                    sh 'rm -rf back_pro_sec-main/node_modules'
-                    sh 'rm -rf front_proj_sec1-main/node_modules'
+steps {
+    script {
+        sh "chmod 600 back_pro_sec-main/servless.pem"
+        sh "cat back_pro_sec-main/servless.pem"    
+        // Remove node_modules to ensure fresh installs
+        sh 'rm -rf back_pro_sec-main/node_modules'
+        sh 'rm -rf front_proj_sec1-main/node_modules'
 
-                    // Copy files to EC2 using SCP
-                    sh "scp -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem -r ./back_pro_sec-main ./front_proj_sec1-main ec2-user@50.16.85.89:~/"
+        // Copy files to EC2 using SCP
+        sh "scp -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem -r ./back_pro_sec-main ./front_proj_sec1-main ec2-user@50.16.85.89:~/"
 
-                    // SSH into EC2 and execute build commands and start the applications
-                    sh """
-                        ssh -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem ec2-user@50.16.85.89 '
-                            cd ~/back_pro_sec-main &&
-                            rm -rf node_modules &&
-                            npm install &&
-                            npm run build &&
-                            npm install pm2 -g &&
-                            pm2 start index.js --name my-app -f
-                        
-                        ssh -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem ec2-user@50.16.85.89 '
-                            cd ~/front_proj_sec1-main &&
-                            rm -rf node_modules &&
-                            npm install &&
-                            npm run build &&
-                            npm start
-                    """
-                }
-            }
-        }
+        // SSH into EC2 and execute build commands and start the applications
+        sh '''
+            ssh -o StrictHostKeyChecking=no -i back_pro_sec-main/servless.pem ec2-user@50.16.85.89 '
+                cd ~/back_pro_sec-main &&
+                rm -rf node_modules &&
+                npm install &&
+                npm run build &&
+                npm install pm2 -g &&
+                pm2 start index.js --name my-app &&
+                cd ~/front_proj_sec1-main &&
+                rm -rf node_modules &&
+                npm install &&
+                npm run build &&
+                npm start
+            '
+        '''
+    }
+}
+
 }
 }
