--- a/back_pro_sec-main/Jenkinsfile
+++ b/back_pro_sec-main/Jenkinsfile
@@ -56,6 +56,7 @@ steps {
                 cd ~/back_pro_sec-main &&
                 rm -rf node_modules &&
                 npm install &&
+                npm install cors &&
                 npm run build &&
                 npm install pm2 -g &&
                 pm2 start index.js --name my-app -f &&
